--- a/src/components/main.module.css
+++ b/src/components/main.module.css
@@ -1,7 +1,19 @@
 .cardContainer {
-    border-radius: 4px;
-    background-color: rgb(219, 219, 219);
+    border-radius: 10px;
+    background-color: #FFF;
     padding: 24px;
-    margin: 0 auto;
-    max-width: 50%;
+    margin: 32px auto;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
+    0 2px 4px rgba(0,0,0,0.07), 
+    0 4px 8px rgba(0,0,0,0.07), 
+    0 8px 16px rgba(0,0,0,0.07),
+    0 16px 32px rgba(0,0,0,0.07), 
+    0 32px 64px rgba(0,0,0,0.07);
+    width: 100%;
+}
+
+@media (min-width: 1024px) {
+    .cardContainer {
+        width: 70%;
+    }
 }
