--- a/src/components/History/index.module.css
+++ b/src/components/History/index.module.css
@@ -17,6 +17,10 @@
     display: inline;
 }
 
+.noRecordText {
+    text-align: center;
+}
+
 @media (min-width: 480px) {
     .date {
         display: inline;
