--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -12,13 +12,12 @@
     display: flex;
     align-content: center;
     height: 83px;
-
 }
 
 .btn {
     margin-left: 8px;
     margin-right: 8px;
-    height: 58px;
+    max-height: 58px;
 }
 
 @media (min-width: 1024px) {
